syntax = "proto3";

option go_package = "github.com/lexuanquynh/simple-grpc-backend/proto/message";

import "google/api/annotations.proto";

message MessageOne{
  string id = 1;
  string msg = 2;
}

message MessageID{
  string id = 1;
}

service MessageService{
  rpc getMessage(MessageID) returns (MessageOne){
    option (google.api.http) = {
      get: "/v1/msg/{id}"
    };
  }

  rpc createMessage(MessageOne) returns (MessageID){
    option (google.api.http) = {
      post: "/v1/msg"
      body: "*"
    };
  }

}
